Bug 380487 - messagelib master branch fails to build
Summary: messagelib master branch fails to build
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messageviewer (other bugs)
Version First Reported In: GIT (master)
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-02 23:27 UTC by Rik Mills
Modified: 2017-06-03 19:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.45
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rik Mills 2017-06-02 23:27:15 UTC
On both KDE Neon and kubuntu CI builds fail with:

13:10:23
CMakeFiles/KF5MessageViewer.dir/messagepartthemes/default/plugins/attachment
messagepartrenderer.cpp.o: In function
`AttachmentMessagePartRenderer::render(MimeTreeParser::DefaultRendererPrivat
e*, QSharedPointer<MimeTreeParser::Interface::MessagePart> const&) const':
13:10:23
/workspace/build/messageviewer/src/messagepartthemes/default/plugins/attachm
entmessagepartrenderer.cpp:73: undefined reference to
`MimeTreeParser::DefaultRendererPrivate::alignText()' 13:10:23 collect2:
error: ld returned 1 exit status
13:10:23
messageviewer/src/CMakeFiles/KF5MessageViewer.dir/build.make:2314:
recipe for target 'messageviewer/src/libKF5MessageViewer.so.5.5.45' failed

Ref: http://build.neon.kde.org/job/xenial_unstable_applications_messagelib_bin_amd64/250/console
Comment 1 Luca Beltrame 2017-06-03 13:37:19 UTC
Breaks on OpenSUSE as well.
Comment 2 Sandro Knauß 2017-06-03 19:01:28 UTC
Git commit bbf8602af9045d1bb52ac4f0babc52a276c48560 by Sandro Knauß.
Committed on 03/06/2017 at 18:59.
Pushed by knauss into branch 'master'.

Fix 380487 - messagelib master branch fails to build

inline not in private header
FIXED-IN: 5.5.45

M  +1    -1    messageviewer/src/messagepartthemes/default/defaultrenderer_p.h

https://commits.kde.org/messagelib/bbf8602af9045d1bb52ac4f0babc52a276c48560