Fix 380487 - messagelib master branch fails to build

inline not in private header

BUG: 380487
FIXED-IN: 5.5.45